updated fixed header on mobile

--- a/css/partials/_media.scss
+++ b/css/partials/_media.scss
@@ -103,7 +103,7 @@
     display:none;
   }
   .reading-content {
-    margin:75px auto 40px;
+    margin:85px auto 40px;
   }
   .main-reading {
     .main-reading-nav {
