--- a/css/partials/_navigation.scss
+++ b/css/partials/_navigation.scss
@@ -18,7 +18,7 @@
 }
 
 #search-icon {
-  height:60px;
+  height:65px;
   position: relative;
 }
 
